# meraki-magic-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  NOTICE  README.md  README_testing.md  docker-compose.yml  pyproject.toml  run_tests.sh  splunk_mcp.py  test_config.py  test_endpoints.py
.github/: dependabot.yml
tests/: test_config.py  test_endpoints_pytest.py  test_mcp.py  test_splunk_mcp.py
